--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "The number one API for all your PokeVerse",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "seed": "node db/seed.js",
-    "start": "node index.js",
-    "start-dev": "nodemon index.js",
+    "start": "node server.js",
+    "start-dev": "nodemon server.js",
     "test": "jest --watch-all"
   },
   "repository": {
