--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   },
   "homepage": "https://github.com/vtng01/Pokedex-API#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.31.1",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3"
