--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed": "node db/seed.js",
     "start": "node server.js",
     "start-dev": "nodemon server.js",
-    "test": "jest --watch-all"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
